--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ Home Page
 <br><br><br><br><br><br><br><br><br><br><br><br>
 
 <div class="socials">
-<a href="#" ><img src="images/insta.png" alt=""></a>
-<a href="#" ><img src="images/fb.png" alt=""></a>
-<a href="#"><img src="images/twitter.png" alt=""></a>
+<a href="https://www.instagram.com/" ><img src="images/insta.png" alt=""></a>
+<a href="https://www.facebook.com/" ><img src="images/fb.png" alt=""></a>
+<a href="https://twitter.com/"><img src="images/twitter.png" alt=""></a>
 <img src="images/508.png" alt="section 508 compliance logo"></div>
 
 <div class="footer"><a href="aboutus.html">About Us</a><br><a href="contact.html">Contact Us </a><br><a href="returns.html">Returns and Exchange</a><br><a href="returns.html"> Terms and Conditions</a></div>
